--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-react-project-starter",
+  "name": "crc",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -33,14 +33,14 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gsong/express-react-project-starter.git"
+    "url": "git+https://github.com/sunnybrie/CRC.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/gsong/express-react-project-starter/issues"
+    "url": "https://github.com/sunnybrie/CRC/issues"
   },
-  "homepage": "https://github.com/gsong/express-react-project-starter#readme",
+  "homepage": "https://github.com/sunnybrie/CRC#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
     "npm-run-all": "^4.1.5",
